Fix: Sidebar - Right side overlap #1052

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -8860,7 +8860,7 @@
       opacity: 0;
       visibility: hidden;
     }
-    :root:has(#sidebar-box[positionend="true"]) #nav-bar {
+    :root:has(#sidebar-box[positionend]) #nav-bar {
       right: 0;
     }
   }
@@ -8923,7 +8923,7 @@
     position: absolute;
     height: 100%;
   }
-  :root[customizing="true"] #browser[collapsed="true"] #sidebar-box[positionend="true"] {
+  :root[customizing="true"] #browser[collapsed="true"] #sidebar-box[positionend] {
     right: 0;
   }
   :root[customizing="true"] #customization-container {
@@ -8936,10 +8936,10 @@
       --uc-customization-conatiner-margin: calc(var(--uc-navbar-height-default) - var(--uc-tabbar-height-default));
     }
   }
-  :root[customizing="true"]:has(#sidebar-box:not([positionend="true"])) #customization-container {
+  :root[customizing="true"]:has(#sidebar-box:not([positionend])) #customization-container {
     margin-inline-start: var(--uc-sidebar-activate-width);
   }
-  :root[customizing="true"]:has(#sidebar-box[positionend="true"]) #customization-container {
+  :root[customizing="true"]:has(#sidebar-box[positionend]) #customization-container {
     margin-inline-end: var(--uc-sidebar-activate-width);
   }
   :root[customizing="true"] #customization-palette-container,
@@ -9255,7 +9255,7 @@
     position: relative !important;
     box-shadow: var(--uc-sidebar-shadow-position) 0px 15px -10px var(--uc-sidebar-shadow-color);
   }
-  #sidebar-box[positionend="true"] {
+  #sidebar-box[positionend] {
     --uc-sidebar-shadow-position: calc(-1 * var(--uc-sidebar-shadow-position-default));
   }
   #sidebar {
@@ -9266,7 +9266,7 @@
   }
 }
 @supports -moz-bool-pref("userChrome.sidebar.overlap") {
-  #sidebar-box[positionend="true"] {
+  #sidebar-box[positionend] {
     direction: rtl;
   }
   #sidebar-header,
@@ -10825,18 +10825,18 @@
       min-width: var(--uc-sidebar-activate-width) !important;
       max-width: var(--uc-sidebar-activate-width) !important;
     }
-    :root[inFullscreen="true"] #sidebar-box:not([positionend="true"]) {
+    :root[inFullscreen="true"] #sidebar-box:not([positionend]) {
       margin-inline-start: var(--uc-sidebar-fullscreen-margin) !important;
       will-change: margin-inline-start;
     }
-    :root[inFullscreen="true"] #sidebar-box:not([positionend="true"]):is(:hover, :focus-within) {
+    :root[inFullscreen="true"] #sidebar-box:not([positionend]):is(:hover, :focus-within) {
       margin-inline-start: 0 !important;
     }
-    :root[inFullscreen="true"] #sidebar-box[positionend="true"] {
+    :root[inFullscreen="true"] #sidebar-box[positionend] {
       margin-inline-end: var(--uc-sidebar-fullscreen-margin) !important;
       will-change: margin-inline-end;
     }
-    :root[inFullscreen="true"] #sidebar-box[positionend="true"]:is(:hover, :focus-within) {
+    :root[inFullscreen="true"] #sidebar-box[positionend]:is(:hover, :focus-within) {
       margin-inline-end: 0 !important;
     }
     @media (prefers-reduced-motion: no-preference) {
@@ -10853,7 +10853,7 @@
         transition: margin-inline-start var(--uc-autohide-fullscreen-sidebar-speed) var(--animation-easing-function)
           var(--uc-autohide-sidebar-delay) !important;
       }
-      :root[inFullscreen="true"] #sidebar-box[positionend="true"] {
+      :root[inFullscreen="true"] #sidebar-box[positionend] {
         transition-property: margin-inline-end !important;
       }
       :root[inFullscreen="true"] #sidebar-box:is(:hover, :focus-within),
@@ -11087,7 +11087,7 @@
     }
   }
   @supports selector(:has(a)) {
-    :root:has(#sidebar-box[positionend="true"]) {
+    :root:has(#sidebar-box[positionend]) {
       --uc-sidebar-icon: url("chrome://browser/skin/sidebars-right.svg");
       --uc-sidebar-icon-reverse: url("chrome://browser/skin/sidebars.svg");
     }
@@ -23696,7 +23696,7 @@
       opacity: 0;
       visibility: hidden;
     }
-    :root:has(#sidebar-box[positionend="true"]) #nav-bar {
+    :root:has(#sidebar-box[positionend]) #nav-bar {
       right: 0;
     }
   }
@@ -23762,7 +23762,7 @@
     position: absolute;
     height: 100%;
   }
-  :root[customizing="true"] #browser[collapsed="true"] #sidebar-box[positionend="true"] {
+  :root[customizing="true"] #browser[collapsed="true"] #sidebar-box[positionend] {
     right: 0;
   }
   :root[customizing="true"] #customization-container {
@@ -23777,12 +23777,12 @@
   }
 }
 @media (-moz-bool-pref: "userChrome.navbar.as_sidebar") {
-  :root[customizing="true"]:has(#sidebar-box:not([positionend="true"])) #customization-container {
+  :root[customizing="true"]:has(#sidebar-box:not([positionend])) #customization-container {
     margin-inline-start: var(--uc-sidebar-activate-width);
   }
 }
 @media (-moz-bool-pref: "userChrome.navbar.as_sidebar") {
-  :root[customizing="true"]:has(#sidebar-box[positionend="true"]) #customization-container {
+  :root[customizing="true"]:has(#sidebar-box[positionend]) #customization-container {
     margin-inline-end: var(--uc-sidebar-activate-width);
   }
 }
@@ -24120,7 +24120,7 @@
     position: relative !important;
     box-shadow: var(--uc-sidebar-shadow-position) 0px 15px -10px var(--uc-sidebar-shadow-color);
   }
-  #sidebar-box[positionend="true"] {
+  #sidebar-box[positionend] {
     --uc-sidebar-shadow-position: calc(-1 * var(--uc-sidebar-shadow-position-default));
   }
   #sidebar {
@@ -24131,7 +24131,7 @@
   }
 }
 @media (-moz-bool-pref: "userChrome.sidebar.overlap") {
-  #sidebar-box[positionend="true"] {
+  #sidebar-box[positionend] {
     direction: rtl;
   }
   #sidebar-header,
@@ -25966,18 +25966,18 @@
     min-width: var(--uc-sidebar-activate-width) !important;
     max-width: var(--uc-sidebar-activate-width) !important;
   }
-  :root[inFullscreen="true"] #sidebar-box:not([positionend="true"]) {
+  :root[inFullscreen="true"] #sidebar-box:not([positionend]) {
     margin-inline-start: var(--uc-sidebar-fullscreen-margin) !important;
     will-change: margin-inline-start;
   }
-  :root[inFullscreen="true"] #sidebar-box:not([positionend="true"]):is(:hover, :focus-within) {
+  :root[inFullscreen="true"] #sidebar-box:not([positionend]):is(:hover, :focus-within) {
     margin-inline-start: 0 !important;
   }
-  :root[inFullscreen="true"] #sidebar-box[positionend="true"] {
+  :root[inFullscreen="true"] #sidebar-box[positionend] {
     margin-inline-end: var(--uc-sidebar-fullscreen-margin) !important;
     will-change: margin-inline-end;
   }
-  :root[inFullscreen="true"] #sidebar-box[positionend="true"]:is(:hover, :focus-within) {
+  :root[inFullscreen="true"] #sidebar-box[positionend]:is(:hover, :focus-within) {
     margin-inline-end: 0 !important;
   }
 }
@@ -25995,7 +25995,7 @@
     transition: margin-inline-start var(--uc-autohide-fullscreen-sidebar-speed) var(--animation-easing-function)
       var(--uc-autohide-sidebar-delay) !important;
   }
-  :root[inFullscreen="true"] #sidebar-box[positionend="true"] {
+  :root[inFullscreen="true"] #sidebar-box[positionend] {
     transition-property: margin-inline-end !important;
   }
   :root[inFullscreen="true"] #sidebar-box:is(:hover, :focus-within),
@@ -26216,7 +26216,7 @@
 }
 @media not (-moz-bool-pref: "userChrome.icon.disabled") {
   @supports selector(:has(a)) {
-    :root:has(#sidebar-box[positionend="true"]) {
+    :root:has(#sidebar-box[positionend]) {
       --uc-sidebar-icon: url("chrome://browser/skin/sidebars-right.svg");
       --uc-sidebar-icon-reverse: url("chrome://browser/skin/sidebars.svg");
     }
